tests/pass/basic_hello.jlite
class Test {
    Void main() {
      println("Hello");
    }
}