tests/fail/empty_main.jlite
Void Test {
    Void main() {

        // Hey, this is empty!

    }
}